spacing in drawer fix

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -319,7 +319,7 @@ padding-right:0px;
     transition: 1s ease;
 }
 .drawerBtns{
-  font-size:22px;
+  font-size:26px;
 }
 #drawerTitle{
   font-size:34px;
